// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInForm component Snapshots When is loading matches 1`] = `
<form>
  <formgroup-stub
    name="userOrEmail"
    title="Username or Email"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="userOrEmail"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="password"
    title="Password"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="password"
      type="password"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub>
    <basebutton-stub
      disabled="true"
      variant="primary"
    >
      
      Sign in
    
    </basebutton-stub>
  </formgroup-stub>
   
  <progressbar-stub />
   
  <!---->
</form>
`;

exports[`SignInForm component Snapshots When is there is a error matches 1`] = `
<form>
  <formgroup-stub
    name="userOrEmail"
    title="Username or Email"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="userOrEmail"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="password"
    title="Password"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="password"
      type="password"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub>
    <basebutton-stub
      variant="primary"
    >
      
      Sign in
    
    </basebutton-stub>
  </formgroup-stub>
   
  <!---->
   
  <errorsummary-stub>
    
    Invalid login
  
  </errorsummary-stub>
</form>
`;

exports[`SignInForm component Snapshots matches 1`] = `
<form>
  <formgroup-stub
    name="userOrEmail"
    title="Username or Email"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="userOrEmail"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="password"
    title="Password"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="password"
      type="password"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub>
    <basebutton-stub
      variant="primary"
    >
      
      Sign in
    
    </basebutton-stub>
  </formgroup-stub>
   
  <!---->
   
  <!---->
</form>
`;
